--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
-	font-family: 'Akaya Telivigala', cursive;
-font-family: 'Source Code Pro', monospace;
+	font-family: 'Noto Sans', sans-serif;
+font-family: 'Public Sans', sans-serif;
 }
 
 .footer {
